<!--  <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.geotasker.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu> -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/normal"/>
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/satellite"/>
    <!--<item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/terrain"/>
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/hybrid"/>
    <item
        android:id="@+id/mapTypeNone"
        android:title="@string/none"/> -->
    <item
        android:id="@+id/seeTraffic"
        android:title="@string/traffic"/>
    <item
        android:id="@+id/gotoCurrentLocation"
        android:title="@string/current"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"/>

</menu>

