<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_light_grey"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/task_distance"
            android:orientation="vertical" >
	        
            <TextView
		        android:id="@+id/task_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_5dp"
		        android:textColor="@color/text_color"
		        android:text="@string/add_position_activity_input_title"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
	
		    <TextView
		        android:id="@+id/task_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/task_title"
		        android:textColor="@color/text_color"
		        android:layout_marginLeft="20dp"
		        android:layout_marginBottom="@dimen/padding_5dp"
		        android:text="@string/add_position_activity_input_task" />
	    
	    </LinearLayout>
        
	    <ImageView
	        android:id="@+id/task_delete_image"
	        android:contentDescription="@string/image_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_margin="@dimen/padding_5dp"
	        android:src="@drawable/ic_action_delete" />

	    <TextView
	        android:id="@+id/task_distance"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/task_delete_image"
	        android:textColor="@color/text_color" />
        
    </RelativeLayout>



</RelativeLayout>
